--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -17,7 +17,7 @@ serde_json      = "1.0.81"
 tokio           = { version = "1.19.2", features = ["net", "rt-multi-thread", "sync", "parking_lot"] }
 tarpc           = { version = "0.29.0" }
 xbase-proto     = { path = "../proto/", features = ["neovim"] }
-mlua            = { version = "0.8.0", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"] }
+mlua            = { version = "0.8.0", features = ["luajit", "module", "vendored", "send", "serialize", "async", "macros"] }
 async-trait = "0.1.56"
 serde = { version = "1.0.137", features = ["derive"] }
 linemux = "0.2.3"
