--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -19,8 +19,8 @@ anyhow       = "1.0"
 thiserror    = "1.0.31"
 which        = { version = "4.2.5", optional = true }
 notify       = { version = "4.0.17", optional = true }
-nvim-rs      = { version = "0.4.0", features = ["use_tokio"], optional = true }
 simctl       = { git = "https://github.com/xbase-lab/simctl", optional = true }
+
 tokio-serde  = { version = "0.8.0", features = ["bincode", "json"] }
 tokio-util   = { version = "0.6.9",  features = ["codec"] }
 mlua         = { version = "0.8.0", optional = true  }
@@ -30,6 +30,6 @@ linemux = {version = "0.2.3", optional = true}
 
 [features]
 default = []
-server = [ "which", "notify", "nvim-rs", "simctl"]
+server = [ "which", "notify", "simctl"]
 client = [ ]
 neovim = [ "client", "mlua", "linemux" ]
