--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,8 @@ libproc               = { version = "0.12.0"  }
 paste                 = { version = "1.0.7"   }
 which                 = { version = "4.2.5"   }
 os_pipe               = { version = "1.0.1"   }
+signal-hook           = { version = "0.3.14"  }
+signal-hook-tokio     = { version = "0.3.1", features = ["futures-v0_3"] }
 
 [workspace]
 members = [ "crates/*" ]
